# uml-mcp

./: .gitattributes  .gitignore  CLAUDE.md  DESKTOP_EXTENSION_GUIDE.md  Dockerfile  GITHUB_ACTIONS_SAFETY.md  MIGRATION_TO_UV.md  Makefile  README.md  RELEASE_INSTRUCTIONS.md  UV_SETUP.md  app.py  mcp_serve2r.py  mcp_server.py  pyproject.toml  uv.toml  vercel.json
.github/workflows/: README.md  build.yml  ci.yml  ci.yml.disabled  claude-code-review.yml  claude-review-commit.yml  publish.yml.disabled  release.yml  test.yml
ai_uml/: requirements.txt
ai_uml/config/: diagram_config.json
ai_uml/image_generation/: README.md  generate_images.py
ai_uml/json_schemas/: diagram_schema.json
ai_uml/src/: main.py
ai_uml/src/diagram/: __init__.py  utils.py
ai_uml/src/diagram/blocks/: advanced.py  attention.py  base.py  concatenation.py  decoder.py  encoder.py  latent.py  rectangle.py
ai_uml/src/diagram/core/: diagram.py  json_parser.py
ai_uml/src/diagram/utils/: geometry.py  svg_validator.py
ai_uml/src/evaluation/: __init__.py  evaluator.py  example_usage.py
ai_uml/src/model_training/: __init__.py  create_dataset.py  inference.py  train_siglip.py
docs/: PLANTUML_SETUP.md  index.md  installation.md
extension/: .gitignore  ICON_PLACEHOLDER.md  README.md  build.ps1  build.py  build.sh  manifest.json
mcp_core/api/: docs_generator.py
mcp_core/core/: __init__.py  config.py  server.py  utils.py
mcp_core/prompts/: __init__.py  diagram_prompts.py
mcp_core/resources/: __init__.py  diagram_resources.py
mcp_core/server/: __init__.py  fastmcp_wrapper.py
mcp_core/tools/: __init__.py  diagram_tools.py
plantuml_local/: __init__.py  plantuml_client.py
tests/: test_core_utils.py  test_diagram_tools.py  test_plantuml_client.py
